# irig106-studio

./: .gitignore  Cargo.toml  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
crates/irig106-studio-core/: Cargo.toml
crates/irig106-studio-core/fuzz/: Cargo.toml
crates/irig106-studio-core/fuzz/fuzz_targets/: fuzz_checksum.rs  fuzz_packet_index.rs
crates/irig106-studio-core/src/: checksum.rs  decode.rs  error.rs  file.rs  index.rs  io.rs  lib.rs  summary.rs  tests.rs  time.rs  tmats.rs  types.rs
crates/irig106-studio-wasm/: Cargo.toml
crates/irig106-studio-wasm/src/: lib.rs
docs/: CONTRIBUTING.md  INTEGRATION.md  PROJECT_STRUCTURE.md  ROADMAP.md  architecture.md  implementation-plan.md  ui-guidelines.md  ui-prompt-for-initial-test.md
docs/adr/: ADR-001-tauri-v2.md  ADR-002-platform-abstraction.md  ADR-003-dark-theme.md  ADR-004-vanilla-typescript.md  ADR-005-keyboard-shortcuts.md  ADR-006-domain-types.md  ADR-008-wasm-architecture.md  README.md
docs/implementation/: 01-foundations-and-rules.md  02-browser-shell.md  03-state-actions-and-rendering.md  04-service-boundary-and-file-intake.md  05-worker-model-and-message-flow.md  06-wasm-integration-and-external-core-pause.md  07-performance-copying-and-large-files.md  08-first-vertical-slices-and-breadcrumbs.md  README.md
docs/requirements/: L1-requirements.md  L2-requirements.md  traceability-matrix.md
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: bottom-panel.ts  channel-tree.ts  context-menu.ts  drag-drop.ts  keyboard-shortcuts.test.ts  keyboard-shortcuts.ts  layout-persistence.ts  properties-panel.ts  shortcuts-overlay.ts  statusbar.ts  theme-switcher.test.ts  theme-switcher.ts  toolbar.ts  viewport.ts
src/platform/: adapter.ts
src/styles/: app.css  reset.css  tokens.css
src/types/: domain.test.ts  domain.ts
