[package]
name = "irig106-studio"
version = "0.1.0"
description = "IRIG 106 Chapter 10 file visualization and analysis tool"
authors = ["Joey"]
edition = "2021"

[lib]
name = "irig106_studio_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Core library — the shared Rust backend
irig106-studio-core = { path = "../crates/irig106-studio-core" }

# Future: wire in the standalone crates
# irig106-time = { path = "../../irig106-time" }
# irig106-tmats = { path = "../../irig106-tmats" }
