[package]
name = "irig106-studio-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for irig106-studio-core"
authors = ["Joey"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
irig106-studio-core = { path = "../irig106-studio-core", features = ["wasm"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
opt-level = "s"
lto = true
